# lsarelayx

./: .gitignore  CMakeLists.txt  README.md
client/: Bitsery.cs  CMakeLists.txt  NtlmRelayChallengeResponse.cs  Options.cs  Program.cs  Utils.cs  lsarelayx.csproj  lsarelayx.sln  packages.config
client/Asn1/: AsnElt.cs
client/Commands/: Command.cs  InitRequest.cs  InitResponse.cs  NegotiateRequest.cs  NegotiateResponse.cs  RelayChallengeResponse.cs  RelayCompleteResponse.cs  RelayRequest.cs  UserInfo.cs
client/Negotiate/: NegToken.cs  NegTokenInit.cs  NegTokenResponse.cs
client/Properties/: AssemblyInfo.cs
plugin/: CMakeLists.txt  commands.cpp  commands.h  debug.cpp  debug.hxx  dllmain.cpp  handle.hxx  lsarelayx.cpp  lsarelayx.def  lsarelayx.hxx  main.cpp  msv1_0.cpp  msv1_0.hxx  ntdll.h  ntsam.h  pipe.cpp  pipe.hxx  relaycontext.cpp  relaycontext.h  spnego.cpp  spnego.hxx
plugin/include/bitsery/: deserializer.h  serializer.h
